fix : modify api docs
